--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -2,10 +2,41 @@
   position: absolute;
   top: 3px;
   right: 35px;
-  color: #ec7ab7;
+  color: #49b3e8;
 }
 .user {
   height: 20px;
   width: 20px;
   float: none;
+  position: absolute;
+  right: 7px;
+  top: 6px;
+}
+.dropdown {
+  position: absolute;
+  top: 27px;
+  right: 8px;
+  border-radius: 5px;
+  border: 1px solid #24a5e6;
+  background-color: white;
+}
+.line-border {
+  position: absolute;
+  width: 100%;
+  height: 0;
+  border: 1px solid #49b3e8;
+}
+.dropdown a {
+  text-decoration: none !important;
+  color: none !important;
+}
+.dropdown-item:hover {
+  color: #49b3e8 !important;
+  text-decoration: none !important;
+}
+.dropdown-wrapper:hover {
+  cursor: pointer;
+}
+.content-2-list-ket .satu:hover {
+  cursor: pointer;
 }
