--- a/src/Home.css
+++ b/src/Home.css
@@ -1,13 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Oxanium&display=swap");
 
 .header {
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%);
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%);
   height: 45vh;
 }
 .nav-head {
   height: 8vh;
   background-color: white;
   box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.25);
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 .nav-head-left {
   padding-left: 15px;
@@ -15,7 +18,7 @@
   font-family: "Oxanium";
   font-weight: bold;
   font-size: large;
-  color: #ec7ab7;
+  color: #49b3e8;
 }
 .nav-head-right {
   float: right;
@@ -24,13 +27,13 @@
   right: 15px;
 }
 .daftar {
-  border: 1px solid #ec7ab7 !important;
+  border: 1px solid #49b3e8 !important;
   color: #ec7ab7 !important;
   padding: 5px 10px !important;
   margin-right: 10px;
 }
 .daftar:hover {
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%) !important;
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%) !important;
   color: white !important;
 }
 .login {
@@ -94,7 +97,7 @@
   position: absolute;
   top: 240px;
   left: 152px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25) box;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
 .content-1-left {
   float: left;
@@ -167,7 +170,7 @@
 .rectangle {
   height: 40px;
   width: 40px;
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%);
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%);
   border-radius: 50%;
   position: absolute;
   top: 65px;
@@ -227,8 +230,8 @@
 }
 
 .cari-tiket {
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%) !important;
-  border: 1px solid #ec7ab7 !important;
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%) !important;
+  border: 1px solid #24a5e6 !important;
   padding: 5px 10px !important;
   position: absolute;
   top: 132px;
@@ -284,6 +287,12 @@
   width: 100%;
   border: 1px solid black;
   margin-bottom: 10px;
+}
+.satu:hover {
+  cursor: pointer;
+}
+.satu {
+  height: 80px;
 }
 .right1 {
   height: 25px;
@@ -346,7 +355,7 @@
   position: absolute;
   left: 800px;
   padding-top: 10px;
-  color: #ec7ab7;
+  color: #49b3e8;
 }
 
 .dua .kereta {
@@ -387,7 +396,7 @@
   position: absolute;
   left: 800px;
   padding-top: 10px;
-  color: #ec7ab7;
+  color: #49b3e8;
 }
 .tiga .kereta {
   position: absolute;
@@ -427,5 +436,12 @@
   position: absolute;
   left: 800px;
   padding-top: 10px;
-  color: #ec7ab7;
+  color: #49b3e8;
+}
+.footer {
+  position: absolute;
+  top: 800px;
+  width: 100%;
+  height: 8vh;
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%);
 }
