--- a/src/ModalLogin.css
+++ b/src/ModalLogin.css
@@ -3,7 +3,7 @@
   border: rgb(248, 178, 49);
 }
 div.modal-header-login {
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%);
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%);
 }
 .title-login {
   text-align: center;
@@ -28,17 +28,17 @@ div.modal-header-login {
 .submit {
   padding: 5px 20px;
   border-radius: 15px;
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%) !important;
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%) !important;
   color: black;
   width: 300px;
 }
 
-.submit:hover {
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
-}
-
 .btn-login {
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%) !important;
-  border: 1px solid #ec7ab7 !important;
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%) !important;
+  border: 1px solid #49b3e8 !important;
   padding: 5px 10px !important;
+}
+.modal-bot {
+  padding-left: 137px;
+  padding-bottom: 5px;
 }
