--- a/src/MyTicket.css
+++ b/src/MyTicket.css
@@ -10,7 +10,7 @@
   position: absolute;
   top: 10px;
   right: 50px;
-  color: #ec7ab7;
+  color: #49b3e8;
 }
 .content-tiket {
   height: 350px;
@@ -40,7 +40,7 @@
   font-family: "Oxanium";
   font-weight: bold;
   font-size: large;
-  color: #ec7ab7;
+  color: #49b3e8;
 }
 .isi {
   margin-top: 10px;
@@ -76,7 +76,7 @@
 .bulet {
   height: 10px;
   width: 10px;
-  background-color: #ec7ab7;
+  background-color: #49b3e8;
   border-radius: 100%;
 }
 .isi-ket .atas {
@@ -84,7 +84,7 @@
   top: 60px;
   left: 160px;
   background-color: #f2f2f2;
-  border: 1px solid #ec7ab7;
+  border: 1px solid #49b3e8;
 }
 .garis {
   position: absolute;
@@ -120,7 +120,7 @@
   left: 210px;
   top: 120px;
 }
-.tiba span {
+.tiba-tujuan span {
   font-size: 12px;
   color: #959595;
 }
@@ -166,7 +166,7 @@
   top: 210px;
   left: 310px;
 }
-.isi-ket .email {
+.email {
   font-size: 14px;
   position: absolute;
   top: 210px;
@@ -191,7 +191,7 @@
   font-size: 14px;
   color: #b1b1b1;
   position: absolute;
-  left: 190px;
+  left: 170px;
   padding-top: 8px;
 }
 .isi .nomor {
@@ -205,15 +205,15 @@
   font-size: 14px;
   color: #b1b1b1;
   position: absolute;
-  left: 440px;
+  left: 480px;
   padding-top: 8px;
 }
 
 .btn-bayar {
-  border: 1px solid #ec7ab7 !important;
+  border: 1px solid #24a5a6 !important;
   color: white !important;
   padding: 5px 10px !important;
-  background: linear-gradient(90deg, #ec7ab7 0%, #ec7a7a 100%);
+  background: linear-gradient(90deg, #49b3e8 0%, #24a5e6 100%);
   position: absolute;
   left: 780px;
   top: 220px;
